test/test-files/analyzer/loop-control-insts/error-break-count-not-too-high/exception.out
Semantic error in : ./test-files/analyzer/loop-control-insts/error-break-count-not-too-high/source.spice:7:17:
Invalid number of break calls: We can only break 2 time(s) here

break 4;
^^^^^^^